# DVP-Settlement-Python

./: README.md  docker-compose.yaml  dvp-settlement.py  dvp-settlement.sql  outbox-publisher.py  pyproject.toml
db/init/: 001-schema.sql  002-readonly-user.sql
dvp-service/: Dockerfile  dvp-service.py
mpc/: Dockerfile  node.py
outbox/: Dockerfile  outbox-publisher.py
signing-gateway/: Dockerfile  gateway.py
