[project]
name = "dvp-settlement"
version = "0.1.0"
description = "Institutional DVP Settlement & Clearing System"
requires-python = ">=3.13"
dependencies = [
    "asyncpg==0.30.0",
    "aiokafka==0.12.0",
    "aiohttp==3.11.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
